force-app/main/default/objects/Community_Admins__c/Community_Admins__c.object-meta.xml
<CustomObject>
    <description>Used to store data values that are necessary for some Community features such as Terms and Conditions</description>
    <label>Community Admin</label>
    <nameField>
        <displayFormat>CA.{yy}{mm}{0}</displayFormat>
        <label>Community Admin Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Admin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>