force-app/main/default/objects/Community_Admins__c/fields/Terms_Archived_Date__c.field-meta.xml
<CustomField>
    <fullName>Terms_Archived_Date__c</fullName>
    <description>Represents the Date/Time when the Terms records become Archived.</description>
    <inlineHelpText>Represents the Date/Time when the Terms records become Archived.</inlineHelpText>
    <label>Terms Archived Date</label>
    <type>DateTime</type>
</CustomField>