force-app/main/default/objects/Community_Admins__c/fields/Terms_Body__c.field-meta.xml
<CustomField>
    <fullName>Terms_Body__c</fullName>
    <description>Represents the Body of the Terms that will be displayed in the Community Portal when published.</description>
    <inlineHelpText>Represents the Body of the Terms that will be displayed in the Community Portal when published.</inlineHelpText>
    <label>Terms Body</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>