force-app/main/default/objects/Community_Admins__c/fields/Terms_Published_Date__c.field-meta.xml
<CustomField>
    <fullName>Terms_Published_Date__c</fullName>
    <description>Represents the Date/Time when the Terms records was published.</description>
    <inlineHelpText>Represents the Date/Time when the Terms records was published.</inlineHelpText>
    <label>Terms Published Date</label>
    <type>DateTime</type>
</CustomField>