force-app/main/default/objects/Community_Admins__c/fields/Terms_Req_New_Signature__c.field-meta.xml
<CustomField>
    <fullName>Terms_Req_New_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, Users will need to Review and Sign the newly published Community Terms.</description>
    <inlineHelpText>When selected, Users will need to Review and Sign the newly published Community Terms.</inlineHelpText>
    <label>Terms Req New Signature</label>
    <type>Checkbox</type>
</CustomField>