force-app/main/default/objects/Community_Admins__c/fields/Terms_Status__c.field-meta.xml
<CustomField>
    <fullName>Terms_Status__c</fullName>
    <description>Represents the Status of the Terms &amp; Conditions from Writing to Publishing.</description>
    <inlineHelpText>Represents the Status of the Terms &amp; Conditions from Writing to Publishing.</inlineHelpText>
    <label>Terms Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
                <default>true</default>
                <label>In Process</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>