force-app/main/default/objects/Community_Admins__c/recordTypes/Community_Terms.recordType-meta.xml
<RecordType>
    <fullName>Community_Terms</fullName>
    <active>true</active>
    <description>Represents Terms and Conditions for the Community.</description>
    <label>Community Terms</label>
</RecordType>