force-app/main/default/objects/Community_Admins__c/recordTypes/Group_Terms.recordType-meta.xml
<RecordType>
    <fullName>Group_Terms</fullName>
    <active>true</active>
    <description>Represents Terms and Conditions for creating a Group.</description>
    <label>Group Terms</label>
</RecordType>