force-app/main/default/objects/Community_Admins__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Terms_Published_Date__c</columns>
    <columns>Terms_Archived_Date__c</columns>
    <columns>Terms_Status__c</columns>
    <columns>Terms_Req_New_Signature__c</columns>
    <columns>Terms_Body__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>